Practice Work/Numpy basics
Last login: Mon Sep  9 15:06:58 on ttys001
Jambar-SD:~ jambarsd$ import numpy as np
-bash: import: command not found
Jambar-SD:~ jambarsd$ ipython
Python 3.7.1 (default, Dec 14 2018, 13:28:58)
Type 'copyright', 'credits' or 'license' for more information
IPython 7.2.0 -- An enhanced Interactive Python. Type '?' for help.

In [1]: import numpy as np

In [2]: mylist = [1,2,3,4]

In [3]: np.array(mylist)
Out[3]: array([1, 2, 3, 4])

In [4]: mylist
Out[4]: [1, 2, 3, 4]

In [5]: type(mylist)
Out[5]: list

In [6]: arr = np.array(mylist)

In [7]: type(arr)
Out[7]: numpy.ndarray

In [8]: arr
Out[8]: array([1, 2, 3, 4])

In [9]: a = np.arrange(1,10,2)
---------------------------------------------------------------------------
AttributeError                            Traceback (most recent call last)
<ipython-input-9-3c3aa697d245> in <module>
----> 1 a = np.arrange(1,10,2)

AttributeError: module 'numpy' has no attribute 'arrange'

In [10]: a = np.arange(1,10,2)

In [11]: a
Out[11]: array([1, 3, 5, 7, 9])

In [12]:  = np.arange(1,10)
  File "<ipython-input-12-5704b87c3048>", line 1
    = np.arange(1,10)
    ^
SyntaxError: invalid syntax


In [13]: b = np.arange(1,10)

In [14]: b
Out[14]: array([1, 2, 3, 4, 5, 6, 7, 8, 9])

In [15]: np.zeros((5,5))
Out[15]:
array([[0., 0., 0., 0., 0.],
       [0., 0., 0., 0., 0.],
       [0., 0., 0., 0., 0.],
       [0., 0., 0., 0., 0.],
       [0., 0., 0., 0., 0.]])

In [16]: np.zeros((1,10))
Out[16]: array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])

In [17]: np.zeros((2,10))
Out[17]:
array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],
       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])

In [18]: np.ones((1,10))
Out[18]: array([[1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]])

In [19]: np.random.randint(0,100)
Out[19]: 75

In [20]: np.random.randint(0,100)
Out[20]: 43

In [21]: np.random.randint(0,100)
Out[21]: 99

In [22]: np.random.randint(0,100(5,5))
---------------------------------------------------------------------------
TypeError                                 Traceback (most recent call last)
<ipython-input-22-dc3352de7653> in <module>
----> 1 np.random.randint(0,100(5,5))

TypeError: 'int' object is not callable

In [23]: np.random.randint(0,100,(5,5))
Out[23]:
array([[32, 30, 33, 31, 68],
       [97, 69, 49, 93, 79],
       [73, 89, 22,  5, 99],
       [43, 81, 95, 99,  5],
       [89, 57, 87,  8, 13]])

In [24]: np.linspace(0,10,6)
Out[24]: array([ 0.,  2.,  4.,  6.,  8., 10.])

In [25]: np.linspace(0,10,10)
Out[25]:
array([ 0.        ,  1.11111111,  2.22222222,  3.33333333,  4.44444444,
        5.55555556,  6.66666667,  7.77777778,  8.88888889, 10.        ])

In [26]: np.linspace(0,10,10001)
Out[26]:
array([0.000e+00, 1.000e-03, 2.000e-03, ..., 9.998e+00, 9.999e+00,
       1.000e+01])

In [27]: np.linspace(0,10,201)
Out[27]:
array([ 0.  ,  0.05,  0.1 ,  0.15,  0.2 ,  0.25,  0.3 ,  0.35,  0.4 ,
        0.45,  0.5 ,  0.55,  0.6 ,  0.65,  0.7 ,  0.75,  0.8 ,  0.85,
        0.9 ,  0.95,  1.  ,  1.05,  1.1 ,  1.15,  1.2 ,  1.25,  1.3 ,
        1.35,  1.4 ,  1.45,  1.5 ,  1.55,  1.6 ,  1.65,  1.7 ,  1.75,
        1.8 ,  1.85,  1.9 ,  1.95,  2.  ,  2.05,  2.1 ,  2.15,  2.2 ,
        2.25,  2.3 ,  2.35,  2.4 ,  2.45,  2.5 ,  2.55,  2.6 ,  2.65,
        2.7 ,  2.75,  2.8 ,  2.85,  2.9 ,  2.95,  3.  ,  3.05,  3.1 ,
        3.15,  3.2 ,  3.25,  3.3 ,  3.35,  3.4 ,  3.45,  3.5 ,  3.55,
        3.6 ,  3.65,  3.7 ,  3.75,  3.8 ,  3.85,  3.9 ,  3.95,  4.  ,
        4.05,  4.1 ,  4.15,  4.2 ,  4.25,  4.3 ,  4.35,  4.4 ,  4.45,
        4.5 ,  4.55,  4.6 ,  4.65,  4.7 ,  4.75,  4.8 ,  4.85,  4.9 ,
        4.95,  5.  ,  5.05,  5.1 ,  5.15,  5.2 ,  5.25,  5.3 ,  5.35,
        5.4 ,  5.45,  5.5 ,  5.55,  5.6 ,  5.65,  5.7 ,  5.75,  5.8 ,
        5.85,  5.9 ,  5.95,  6.  ,  6.05,  6.1 ,  6.15,  6.2 ,  6.25,
        6.3 ,  6.35,  6.4 ,  6.45,  6.5 ,  6.55,  6.6 ,  6.65,  6.7 ,
        6.75,  6.8 ,  6.85,  6.9 ,  6.95,  7.  ,  7.05,  7.1 ,  7.15,
        7.2 ,  7.25,  7.3 ,  7.35,  7.4 ,  7.45,  7.5 ,  7.55,  7.6 ,
        7.65,  7.7 ,  7.75,  7.8 ,  7.85,  7.9 ,  7.95,  8.  ,  8.05,
        8.1 ,  8.15,  8.2 ,  8.25,  8.3 ,  8.35,  8.4 ,  8.45,  8.5 ,
        8.55,  8.6 ,  8.65,  8.7 ,  8.75,  8.8 ,  8.85,  8.9 ,  8.95,
        9.  ,  9.05,  9.1 ,  9.15,  9.2 ,  9.25,  9.3 ,  9.35,  9.4 ,
        9.45,  9.5 ,  9.55,  9.6 ,  9.65,  9.7 ,  9.75,  9.8 ,  9.85,
        9.9 ,  9.95, 10.  ])

In [28]: np.random.seed(101)

In [29]: np.random.randint(0,100,10)
Out[29]: array([95, 11, 81, 70, 63, 87, 75,  9, 77, 40])

In [30]: np.random.randint(0,100,10)
Out[30]: array([ 4, 63, 40, 60, 92, 64,  5, 12, 93, 40])

In [31]: np.random.seed(101)

In [32]: np.random.seed(101)

In [33]: np.random.randint(0,100,10)
Out[33]: array([95, 11, 81, 70, 63, 87, 75,  9, 77, 40])

In [34]: np.random.seed(102)

In [35]: np.random.randint(0,100,10)
Out[35]: array([ 0, 78, 66, 73, 72, 45, 72, 73, 79,  7])

In [36]: np.random.randint(0,100,10)
Out[36]: array([ 4, 38, 82, 55,  3, 96,  0, 80, 71, 25])

In [37]: np.random.seed(102)

In [38]: np.random.randint(0,100,10)
Out[38]: array([ 0, 78, 66, 73, 72, 45, 72, 73, 79,  7])

In [39]: np.random.seed(101)

In [40]: np.random.randint(0,100,10)
Out[40]: array([95, 11, 81, 70, 63, 87, 75,  9, 77, 40])

In [41]: arr = np.random.randint(0,100,10)

In [42]: arr
Out[42]: array([ 4, 63, 40, 60, 92, 64,  5, 12, 93, 40])

In [43]: arr.max()
Out[43]: 93

In [44]: arr.min()
Out[44]: 4

In [45]: arr.argmax()
Out[45]: 8

In [46]: arr.argmin()
Out[46]: 0

In [47]: arr.reshape(3,5)
---------------------------------------------------------------------------
ValueError                                Traceback (most recent call last)
<ipython-input-47-b90413470e1f> in <module>
----> 1 arr.reshape(3,5)

ValueError: cannot reshape array of size 10 into shape (3,5)

In [48]: arr.reshape(4,5)
---------------------------------------------------------------------------
ValueError                                Traceback (most recent call last)
<ipython-input-48-09ba9c9f0fa4> in <module>
----> 1 arr.reshape(4,5)

ValueError: cannot reshape array of size 10 into shape (4,5)

In [49]: arr.reshape(2,5)
Out[49]:
array([[ 4, 63, 40, 60, 92],
       [64,  5, 12, 93, 40]])

In [50]: mat = np.arange(0,100).reshape(10,10)

In [51]: mat
Out[51]:
array([[ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9],
       [10, 11, 12, 13, 14, 15, 16, 17, 18, 19],
       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29],
       [30, 31, 32, 33, 34, 35, 36, 37, 38, 39],
       [40, 41, 42, 43, 44, 45, 46, 47, 48, 49],
       [50, 51, 52, 53, 54, 55, 56, 57, 58, 59],
       [60, 61, 62, 63, 64, 65, 66, 67, 68, 69],
       [70, 71, 72, 73, 74, 75, 76, 77, 78, 79],
       [80, 81, 82, 83, 84, 85, 86, 87, 88, 89],
       [90, 91, 92, 93, 94, 95, 96, 97, 98, 99]])

In [52]: mat[5,2]
Out[52]: 52

In [53]: mat[:,2]
Out[53]: array([ 2, 12, 22, 32, 42, 52, 62, 72, 82, 92])

In [54]: mat[1,:]
Out[54]: array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19])

In [55]: mat > 40
Out[55]:
array([[False, False, False, False, False, False, False, False, False,
        False],
       [False, False, False, False, False, False, False, False, False,
        False],
       [False, False, False, False, False, False, False, False, False,
        False],
       [False, False, False, False, False, False, False, False, False,
        False],
       [False,  True,  True,  True,  True,  True,  True,  True,  True,
         True],
       [ True,  True,  True,  True,  True,  True,  True,  True,  True,
         True],
       [ True,  True,  True,  True,  True,  True,  True,  True,  True,
         True],
       [ True,  True,  True,  True,  True,  True,  True,  True,  True,
         True],
       [ True,  True,  True,  True,  True,  True,  True,  True,  True,
         True],
       [ True,  True,  True,  True,  True,  True,  True,  True,  True,
         True]])

In [56]: mat[mat > 50]
Out[56]:
array([51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,
       68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84,
       85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99])                                                         
